public-subnet.tf
resource "aws_subnet" "main" {

  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.1.0/24"

  availability_zone = "ap-south-1a"

  tags = {
    Name = "publicsubnet"
  }
}
